Updated readme and added template for future reference