@@ -5,3 +5,22 @@ LeetCode, HackerRank, Codewars, etc.
 ## Source Repo:
 
 [Prulloac's Curated List of Algorithm exercises](http://github.com/prulloac/algorithm-exercises)
+
+## Usage
+
+- Write your code in the folder that matches the problem's name and folder hierarchy.
+- Filename should be the problem's name in UpperCamelCase.
+- Use the `main` method to test your code.
+- Use records to represent data structures for inputs and outputs.
+- Use the `assert` statement to test your code.
+- Use the `System.out.println` statement to debug your code.
+- Write your solution in the `Solution` class.
+- Execute the java file to test your solution.
+
+```bash
+java --source 21 --enable-preview path/to/your/Solution.java
+```
+
+> **Note**: There is a SolutionTemplate.java file in the root folder that you can use as a starting point.
+
+> **Note**: This is a work in progress. I will be adding more exercises and solutions as I go.
